Feat/MET-4977 Coreferencing and Dereferencing for organisations (#597)
* MET-4977 Added Aggregation dereferencing

* MET-4977 Added new sample for unit tests

* MET-4977 Updated wiremock in unit tests

* MET-4977 Changed the type of object to return in method in DereferenceUtils

* MET-4977 Fixing unit tests

* MET-4977 Fixed unit test and added TODO

* MET-4977 Updated dereferenceEntities method

* MET-4977 Code refactoring

* MET-4977 Updating unit tests

* MET-4977 Code refactoring

* MET-4977 Changed dereferenceEntities method

* MET-4977 Changed merging of enitites during dereferencing and fixed unit tests

* MET-4977 Changed merging of enitites during dereferencing and fixed unit tests

* MET-4977 Fixed unit tests

* MET-4977 Added TODO notes

* MET-4977 Fixed extraction of references for dereferencing

* MET-4977 Code review changes

* MET-4977 Fixed imports

* MET-4977 Fixed issues with dereferencing aggregation types and merging empty entities