@@ -3,9 +3,10 @@ package eu.europeana.enrichment.rest.client.dereference;
 import static eu.europeana.metis.network.ExternalRequestUtil.retryableExternalRequestForNetworkExceptions;
 
 import eu.europeana.enrichment.api.external.DereferenceResultStatus;
+
 import eu.europeana.enrichment.api.external.model.EnrichmentBase;
-import eu.europeana.enrichment.api.external.model.EnrichmentResultBaseWrapper;
 import eu.europeana.enrichment.api.external.model.EnrichmentResultList;
+import eu.europeana.enrichment.api.external.model.EnrichmentResultBaseWrapper;
 import eu.europeana.enrichment.api.internal.EntityResolver;
 import eu.europeana.enrichment.api.internal.ReferenceTerm;
 import eu.europeana.enrichment.api.internal.ReferenceTermImpl;
@@ -13,6 +14,10 @@ import eu.europeana.enrichment.rest.client.exceptions.DereferenceException;
 import eu.europeana.enrichment.rest.client.report.Report;
 import eu.europeana.enrichment.utils.DereferenceUtils;
 import eu.europeana.enrichment.utils.EntityMergeEngine;
+
+
+import eu.europeana.metis.schema.jibx.AboutType;
+import eu.europeana.metis.schema.jibx.Aggregation;
 import eu.europeana.metis.schema.jibx.RDF;
 import java.io.IOException;
 import java.net.HttpURLConnection;
@@ -20,18 +25,26 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
+
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.TreeMap;
+import java.util.Collection;
 import java.util.stream.Collectors;
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
+
+import org.apache.commons.collections.CollectionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
@@ -234,19 +247,21 @@ public class DereferencerImpl implements Dereferencer {
 
   @Override
   public Set<Report> dereference(RDF rdf) {
-    HashSet<Report> reports = new HashSet<>();
     // Extract fields from the RDF for dereferencing
     LOGGER.debug(" Extracting fields from RDF for dereferencing...");
-    Set<String> resourceIds = extractReferencesForDereferencing(rdf);
+    Map<Class<? extends AboutType>, Set<String>> resourceIds = extractReferencesForDereferencing(rdf);
 
     // Get the dereferenced information to add to the RDF using the extracted fields
     LOGGER.debug("Using extracted fields to gather enrichment-via-dereferencing information...");
-    DereferencedEntity dereferenceInformation = dereferenceEntities(resourceIds);
-    reports.addAll(dereferenceInformation.getReportMessages());
+    List<DereferencedEntities> dereferenceInformation = dereferenceEntities(resourceIds);
+    Set<Report> reports = dereferenceInformation.stream()
+                                                .map(DereferencedEntities::getReportMessages)
+                                                .flatMap(Collection::stream)
+                                                .collect(Collectors.toSet());
 
     // Merge the acquired information into the RDF
     LOGGER.debug("Merging Dereference Information...");
-    entityMergeEngine.mergeReferenceEntities(rdf, dereferenceInformation.getEnrichmentBaseList());
+    entityMergeEngine.mergeReferenceEntitiesFromDereferencedEntities(rdf, dereferenceInformation);
 
     // Done.
     LOGGER.debug("Dereference completed.");
@@ -254,118 +269,201 @@ public class DereferencerImpl implements Dereferencer {
   }
 
   @Override
-  public DereferencedEntity dereferenceEntities(Set<String> resourceIds) {
-    HashSet<Report> reports = new HashSet<>();
+  public List<DereferencedEntities> dereferenceEntities(Map<Class<? extends AboutType>, Set<String>> resourceIds) {
+
     // Sanity check.
     if (resourceIds.isEmpty()) {
-      return new DereferencedEntity(Collections.emptyList(), reports);
+      return List.of(new DereferencedEntities(Collections.emptyMap(), new HashSet<>()));
     }
+
+    //TODO Using TreeMap to sort out the elements because unit tests were failing due to "incorrect" order
+    //TODO The order should not matter, the unit tests need fixing
+    //TODO There's already ticket MET-5065 to handle it
 
     // First try to get them from our own entity collection database.
-    Set<ReferenceTerm> referenceTermSet = resourceIds
-        .stream()
-        .map(id -> checkIfUrlIsValid(reports, id))
-        .filter(Objects::nonNull)
-        .map(checkedUrl -> validateIfUrlToDereferenceExists(reports, checkedUrl))
-        .filter(Objects::nonNull)
-        .map(validatedUrl -> new ReferenceTermImpl(validatedUrl, new HashSet<>()))
+    TreeMap<Class<? extends AboutType>, Set<ReferenceTerm>> mappedReferenceTerms = new TreeMap<>(
+        Comparator.comparing(Class::getName));
+    TreeMap<Class<? extends AboutType>, DereferencedEntities> dereferencedResultEntities = new TreeMap<>(
+        Comparator.comparing(Class::getName));
+    resourceIds.forEach((key, value) -> {
+      HashSet<Report> reports = new HashSet<>();
+      Set<ReferenceTerm> referenceTermSet = setUpReferenceTermSet(value, reports);
+      mappedReferenceTerms.put(key, referenceTermSet);
+      final DereferencedEntities dereferencedOwnEntities = dereferenceOwnEntities(referenceTermSet, reports, key);
+      dereferencedResultEntities.put(key, dereferencedOwnEntities);
+    });
+
+    final Set<String> foundOwnEntityIds = dereferencedResultEntities
+        .values().stream()
+        .map(DereferencedEntities::getReferenceTermListMap)
+        .map(Map::values).flatMap(Collection::stream).flatMap(Collection::stream)
+        .map(EnrichmentBase::getAbout)
         .collect(Collectors.toSet());
 
-    final DereferencedEntity deferencedOwnEntities = dereferenceOwnEntities(referenceTermSet);
-    reports.addAll(deferencedOwnEntities.getReportMessages());
-
-    final Set<String> foundOwnEntityIds = deferencedOwnEntities.getEnrichmentBaseList()
-                                                               .stream()
-                                                               .map(EnrichmentBase::getAbout)
-                                                               .collect(Collectors.toSet());
-
     // For the remaining ones, get them from the dereference service.
-    for (ReferenceTerm resourceId : referenceTermSet) {
-      if (!foundOwnEntityIds.contains(resourceId.getReference().toString())) {
-        DereferencedEntity deferencedExternalEntities =
-            dereferenceExternalEntity(resourceId.getReference().toString());
-        reports.addAll(deferencedExternalEntities.getReportMessages());
-        deferencedOwnEntities.getEnrichmentBaseList().addAll(deferencedExternalEntities.getEnrichmentBaseList());
+    for (Map.Entry<Class<? extends AboutType>, Set<ReferenceTerm>> entry : mappedReferenceTerms.entrySet()) {
+      DereferencedEntities dereferencedEntities;
+      Set<ReferenceTerm> notFoundOwnReferenceTerms = entry.getValue().stream().filter(
+          referenceTerm -> !foundOwnEntityIds.contains(referenceTerm.getReference().toString())).collect(
+          Collectors.toSet());
+      if(notFoundOwnReferenceTerms.isEmpty()){
+        continue;
       }
+
+      if (entry.getKey().equals(Aggregation.class)) {
+        dereferencedEntities = dereferenceAggregation(notFoundOwnReferenceTerms, entry.getKey());
+      } else {
+        dereferencedEntities = dereferenceExternalEntity(notFoundOwnReferenceTerms, entry.getKey());
+      }
+
+      updateDereferencedEntitiesMap(dereferencedResultEntities, entry.getKey(), dereferencedEntities);
     }
     // Done.
-    return new DereferencedEntity(deferencedOwnEntities.getEnrichmentBaseList(), reports);
+    return new ArrayList<>(dereferencedResultEntities.values());
+  }
+
+  private DereferencedEntities dereferenceAggregation(Set<ReferenceTerm> referenceTerms, Class<? extends AboutType> classType) {
+
+    DereferencedEntities result = dereferenceEntitiesWithUri(referenceTerms,
+        new HashSet<>(), classType);
+
+    //Collect references that returned empty lists values for references that we checked with uri
+    Set<ReferenceTerm> remainingReferences = referenceTerms.stream().filter(
+                                                               referenceTerm -> result.getReferenceTermListMap().get(referenceTerm).isEmpty())
+                                                           .collect(Collectors.toSet());
+
+    //If there are any remaining references then do external dereferencing
+    if (CollectionUtils.isNotEmpty(remainingReferences)) {
+      DereferencedEntities aggregationRemainingDereferencingResult =
+          dereferenceExternalEntity(remainingReferences, classType);
+      result.getReferenceTermListMap().putAll(aggregationRemainingDereferencingResult.getReferenceTermListMap());
+      result.getReportMessages().addAll(aggregationRemainingDereferencingResult.getReportMessages());
+    }
+
+    return result;
   }
 
   @Override
-  public Set<String> extractReferencesForDereferencing(RDF rdf) {
+  public Map<Class<? extends AboutType>, Set<String>> extractReferencesForDereferencing(RDF rdf) {
     return DereferenceUtils.extractReferencesForDereferencing(rdf);
   }
 
-  private DereferencedEntity dereferenceOwnEntities(Set<ReferenceTerm> resourceIds) {
-    HashSet<Report> reports = new HashSet<>();
+  private DereferencedEntities dereferenceOwnEntities(Set<ReferenceTerm> resourceIds,
+      HashSet<Report> reports,
+      Class<? extends AboutType> classType) {
     if (entityResolver == null) {
-      return new DereferencedEntity(Collections.emptyList(), reports);
+      return new DereferencedEntities(Collections.emptyMap(), new HashSet<>());
     }
     try {
-      return new DereferencedEntity(new ArrayList<>(entityResolver.resolveById(resourceIds).values()), reports);
+      Map<ReferenceTerm, List<EnrichmentBase>> result = new HashMap<>();
+      entityResolver.resolveById(resourceIds).forEach((key, value) -> result.put(key, List.of(value)));
+      return new DereferencedEntities(result, reports, classType);
     } catch (Exception e) {
-      DereferenceException dereferenceException = new DereferenceException(
-          "Exception occurred while trying to perform dereferencing.", e);
-      reports.add(Report
-          .buildDereferenceWarn()
-          .withStatus(HttpStatus.OK)
-          .withValue(resourceIds.stream()
-                                .map(resourceId -> resourceId.getReference().toString())
-                                .collect(Collectors.joining(",")))
-          .withException(dereferenceException)
-          .build());
-      return new DereferencedEntity(new ArrayList<>(), reports);
+      return handleDereferencingException(resourceIds, reports, e, classType);
     }
   }
 
-  private DereferencedEntity dereferenceExternalEntity(String resourceId) {
+  private DereferencedEntities dereferenceEntitiesWithUri(Set<ReferenceTerm> resourceIds,
+      HashSet<Report> reports,
+      Class<? extends AboutType> classType) {
+    if (entityResolver == null) {
+      return new DereferencedEntities(Collections.emptyMap(), new HashSet<>());
+    }
+    try {
+      return new DereferencedEntities(new HashMap<>(entityResolver.resolveByUri(resourceIds)), reports, classType);
+    } catch (Exception e) {
+      return handleDereferencingException(resourceIds, reports, e, classType);
+    }
+  }
+
+  private DereferencedEntities dereferenceExternalEntity(Set<ReferenceTerm> referenceTerms,
+      Class<? extends AboutType> classType) {
     HashSet<Report> reports = new HashSet<>();
     // Check that there is something to do.
     if (dereferenceClient == null) {
-      return new DereferencedEntity(Collections.emptyList(), reports);
+      return new DereferencedEntities(Collections.emptyMap(), reports, classType);
     }
 
     // Perform the dereferencing.
     EnrichmentResultList result;
-    try {
-      LOGGER.debug("== Processing {}", resourceId);
-      result = retryableExternalRequestForNetworkExceptions(
-          () -> dereferenceClient.dereference(resourceId));
-      DereferenceResultStatus resultStatus = Optional.ofNullable(result)
-                                                     .map(EnrichmentResultList::getEnrichmentBaseResultWrapperList)
-                                                     .orElseGet(Collections::emptyList).stream()
-                                                     .map(EnrichmentResultBaseWrapper::getDereferenceStatus)
-                                                     .filter(Objects::nonNull).findFirst()
-                                                     .orElse(DereferenceResultStatus.UNKNOWN_ENTITY);
+    Map<ReferenceTerm, List<EnrichmentBase>> resultMap = new HashMap<>();
+    for (ReferenceTerm referenceTerm : referenceTerms) {
+      String resourceId = referenceTerm.getReference().toString();
+      try {
+        LOGGER.debug("== Processing {}", resourceId);
+        result = retryableExternalRequestForNetworkExceptions(
+            () -> dereferenceClient.dereference(resourceId));
+        DereferenceResultStatus resultStatus = Optional.ofNullable(result)
+                                                       .map(EnrichmentResultList::getEnrichmentBaseResultWrapperList)
+                                                       .orElseGet(Collections::emptyList).stream()
+                                                       .map(EnrichmentResultBaseWrapper::getDereferenceStatus)
+                                                       .filter(Objects::nonNull).findFirst()
+                                                       .orElse(DereferenceResultStatus.UNKNOWN_ENTITY);
 
-      setDereferenceStatusInReport(resourceId, reports, resultStatus);
-    } catch (BadRequest e) {
-      // We are forgiving for these errors
-      LOGGER.warn("ResourceId {}, failed", resourceId, e);
-      reports.add(Report
-          .buildDereferenceWarn()
-          .withStatus(HttpStatus.BAD_REQUEST)
-          .withValue(resourceId)
-          .withException(e)
-          .build());
-      result = null;
-    } catch (Exception e) {
-      DereferenceException dereferenceException = new DereferenceException(
-          "Exception occurred while trying to perform dereferencing.", e);
-      reports.add(Report
-          .buildDereferenceWarn()
-          .withStatus(HttpStatus.OK)
-          .withValue(resourceId)
-          .withException(dereferenceException)
-          .build());
-      result = null;
+        setDereferenceStatusInReport(resourceId, reports, resultStatus);
+      } catch (BadRequest e) {
+        // We are forgiving for these errors
+        LOGGER.warn("ResourceId {}, failed", resourceId, e);
+        reports.add(Report
+            .buildDereferenceWarn()
+            .withStatus(HttpStatus.BAD_REQUEST)
+            .withValue(resourceId)
+            .withException(e)
+            .build());
+        result = null;
+      } catch (Exception e) {
+        DereferenceException dereferenceException = new DereferenceException(
+            "Exception occurred while trying to perform dereferencing.", e);
+        reports.add(Report
+            .buildDereferenceWarn()
+            .withStatus(HttpStatus.OK)
+            .withValue(resourceId)
+            .withException(dereferenceException)
+            .build());
+        result = null;
+      }
+      resultMap.put(referenceTerm, Optional.ofNullable(result).map(EnrichmentResultList::getEnrichmentBaseResultWrapperList)
+                                           .orElseGet(Collections::emptyList).stream()
+                                           .map(EnrichmentResultBaseWrapper::getEnrichmentBaseList).filter(Objects::nonNull)
+                                           .flatMap(List::stream).collect(Collectors.toList()));
     }
 
     // Return the result.
-    return new DereferencedEntity(Optional.ofNullable(result).map(EnrichmentResultList::getEnrichmentBaseResultWrapperList)
-                                          .orElseGet(Collections::emptyList).stream()
-                                          .map(EnrichmentResultBaseWrapper::getEnrichmentBaseList).filter(Objects::nonNull)
-                                          .flatMap(List::stream).collect(Collectors.toList()), reports);
+    return new DereferencedEntities(resultMap, reports, classType);
+  }
+
+  private Set<ReferenceTerm> setUpReferenceTermSet(Set<String> resourcesIds, HashSet<Report> reports) {
+    return resourcesIds.stream()
+                       .map(id -> checkIfUrlIsValid(reports, id))
+                       .filter(Objects::nonNull)
+                       .map(checkedUrl -> validateIfUrlToDereferenceExists(reports, checkedUrl))
+                       .filter(Objects::nonNull)
+                       .map(validateUrl -> new ReferenceTermImpl(validateUrl, new HashSet<>()))
+                       .collect(Collectors.toSet());
+  }
+
+  private void updateDereferencedEntitiesMap(TreeMap<Class<? extends AboutType>, DereferencedEntities> mapToUpdate,
+      Class<? extends AboutType> classType,
+      DereferencedEntities elementToUpdateWith) {
+
+    DereferencedEntities foundEntities = mapToUpdate.get(classType);
+    foundEntities.getReferenceTermListMap().putAll(elementToUpdateWith.getReferenceTermListMap());
+    foundEntities.getReportMessages().addAll(elementToUpdateWith.getReportMessages());
+
+  }
+
+  private DereferencedEntities handleDereferencingException(Set<ReferenceTerm> resourceIds, HashSet<Report> reports,
+      Exception exception, Class<? extends AboutType> classType) {
+    DereferenceException dereferenceException = new DereferenceException(
+        "Exception occurred while trying to perform dereferencing.", exception);
+    reports.add(Report
+        .buildDereferenceWarn()
+        .withStatus(HttpStatus.OK)
+        .withValue(resourceIds.stream()
+                              .map(resourceId -> resourceId.getReference().toString())
+                              .collect(Collectors.joining(",")))
+        .withException(dereferenceException)
+        .build());
+    return new DereferencedEntities(new HashMap<>(), reports, classType);
   }
 }
